Bug #38792
return ETIMEDOUT if we meet a timeout in poll
Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
luminous,mimic,nautilus
Regression:
No
Severity:
3 - minor
Description
We don't want to wait on uevent forever, but the return value
of polling in timeout is 0 rather than a negative value.
manpage of poll as below:
RETURN VALUE
On success, a positive number is returned; this is the number of structures which
have nonzero revents fields (in other words, those descriptors with events or errors reported).
A value of 0 indicates that the call timed out and no file descriptors were ready.
On error, -1 is returned, and errno is set appropriately.
Related issues
History
#1 Updated by Jason Dillaman almost 2 years ago
- Status changed from New to Fix Under Review
- Backport set to luminous,mimic,nautilus
- Pull request ID set to 27025
#2 Updated by Ilya Dryomov almost 2 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #38975: luminous: return ETIMEDOUT if we meet a timeout in poll added
#4 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #38976: mimic: return ETIMEDOUT if we meet a timeout in poll added
#5 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #38977: nautilus: return ETIMEDOUT if we meet a timeout in poll added
#6 Updated by Nathan Cutler over 1 year ago
- Status changed from Pending Backport to Resolved